@@ -3,8 +3,10 @@ package rbasamoyai.createbigcannons.cannons.big_cannons.material;
 import com.google.gson.JsonObject;
 
 import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.GsonHelper;
 import net.minecraft.util.StringRepresentable;
+import rbasamoyai.createbigcannons.CreateBigCannons;
 
 import java.util.Arrays;
 import java.util.Map;
@@ -12,8 +14,8 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public record BigCannonMaterialProperties(double minimumVelocityPerBarrel, float weight, int maxSafePropellantStress,
-										  FailureMode failureMode, boolean connectsInSurvival,
-										  boolean isWeldable, int weldDamage, int weldStressPenalty) {
+										  FailureMode failureMode, boolean connectsInSurvival, boolean isWeldable,
+										  int weldDamage, int weldStressPenalty, float minimumSpread, float spreadReductionPerBarrel) {
 
 	public boolean mayGetStuck(float chargesUsed, int barrelTravelled) {
 		if (this.minimumVelocityPerBarrel < 0) return true;
@@ -21,29 +23,55 @@ public record BigCannonMaterialProperties(double minimumVelocityPerBarrel, float
 		return this.minimumVelocityPerBarrel > chargesUsed / barrelTravelled;
 	}
 
-	public static BigCannonMaterialProperties fromJson(JsonObject obj) {
-		double minimumVelocityPerBarrel = Math.max(-1, GsonHelper.getAsDouble(obj, "minimum_velocity_per_barrel"));
+	public static BigCannonMaterialProperties fromJson(ResourceLocation id, JsonObject obj) {
+		double minimumVelocityPerBarrel = GsonHelper.getAsDouble(obj, "minimum_velocity_per_barrel", 1);
+		// Legacy config handling
+		if (GsonHelper.isNumberValue(obj, "squib_ratio_barrels") && GsonHelper.isNumberValue(obj, "squib_ratio_propellant")) {
+			float barrels = (float) GsonHelper.getAsInt(obj, "squib_ratio_barrels");
+			float propellant = (float) GsonHelper.getAsInt(obj, "squib_ratio_propellant");
+			float ratio = propellant <= 0 ? -1 : barrels / propellant;
+			if (ratio < 0) ratio = -1;
+			CreateBigCannons.LOGGER.warn("Legacy values \"squib_ratio_barrels\" and \"squib_ratio_propellant\" found in config for {}, please change to \"max_safe_propellant_stress\". Recommended value: {}", id, String.format(".%2f", ratio));
+			if (!GsonHelper.isNumberValue(obj, "minimum_velocity_per_barrel")) {
+				minimumVelocityPerBarrel = ratio;
+			}
+		}
+		minimumVelocityPerBarrel = Math.max(-1, minimumVelocityPerBarrel);
+
 		float weight = Math.max(0, GsonHelper.getAsFloat(obj, "weight", 2));
-		int maxSafeBaseCharges = Math.max(0, GsonHelper.getAsInt(obj, "max_safe_charges", 2));
+
+		int maxSafeBaseCharges = GsonHelper.getAsInt(obj, "max_safe_propellant_stress", 2);
+		// Legacy config handling
+		if (GsonHelper.isNumberValue(obj, "max_safe_charges")) {
+			CreateBigCannons.LOGGER.warn("Legacy value \"max_safe_charges\" found in config for {}, please change to \"max_safe_propellant_stress\"", id);
+			if (!GsonHelper.isNumberValue(obj, "max_safe_propellant_stress"))
+				maxSafeBaseCharges = GsonHelper.getAsInt(obj, "max_safe_charges");
+		}
+		maxSafeBaseCharges = Math.max(0, maxSafeBaseCharges);
+
 		FailureMode failureMode = FailureMode.byId(GsonHelper.getAsString(obj, "failure_mode"));
 		boolean connectsInSurvival = GsonHelper.getAsBoolean(obj, "connects_in_survival", false);
 		boolean isWeldable = GsonHelper.getAsBoolean(obj, "is_weldable", false);
 		int weldDamage = Math.max(GsonHelper.getAsInt(obj, "weld_damage", 0), 0);
 		int weldStressPenalty = Math.max(GsonHelper.getAsInt(obj, "weld_stress_penalty", 0), 0);
+		float minimumSpread = Math.max(GsonHelper.getAsFloat(obj, "minimum_spread", 0.05f), 0);
+		float spreadReductionPerBarrel = Math.max(GsonHelper.getAsFloat(obj, "spread_reduction_per_barrel", 1), 0);
 		return new BigCannonMaterialProperties(minimumVelocityPerBarrel, weight, maxSafeBaseCharges, failureMode,
-			connectsInSurvival, isWeldable, weldDamage, weldStressPenalty);
+			connectsInSurvival, isWeldable, weldDamage, weldStressPenalty, minimumSpread, spreadReductionPerBarrel);
 	}
 
 	public JsonObject serialize() {
 		JsonObject obj = new JsonObject();
 		obj.addProperty("minimum_velocity_per_barrel", this.minimumVelocityPerBarrel);
 		obj.addProperty("weight", this.weight);
-		obj.addProperty("max_safe_charges", this.maxSafePropellantStress);
+		obj.addProperty("max_safe_propellant_stress", this.maxSafePropellantStress);
 		obj.addProperty("failure_mode", this.failureMode.toString());
 		obj.addProperty("connects_in_survival", this.connectsInSurvival);
 		obj.addProperty("is_weldable", this.isWeldable);
 		obj.addProperty("weld_damage", this.weldDamage);
 		obj.addProperty("weld_stress_penalty", this.weldStressPenalty);
+		obj.addProperty("minimum_spread", this.minimumSpread);
+		obj.addProperty("spread_reduction_per_barrel", this.spreadReductionPerBarrel);
 		return obj;
 	}
 
@@ -55,7 +83,9 @@ public record BigCannonMaterialProperties(double minimumVelocityPerBarrel, float
 			.writeBoolean(this.connectsInSurvival)
 			.writeBoolean(this.isWeldable);
 		buf.writeVarInt(this.weldDamage)
-			.writeVarInt(this.weldStressPenalty);
+			.writeVarInt(this.weldStressPenalty)
+			.writeFloat(this.minimumSpread)
+			.writeFloat(this.spreadReductionPerBarrel);
 	}
 
 	public static BigCannonMaterialProperties fromBuf(FriendlyByteBuf buf) {
@@ -67,8 +97,10 @@ public record BigCannonMaterialProperties(double minimumVelocityPerBarrel, float
 		boolean isWeldable = buf.readBoolean();
 		int weldDamage = buf.readVarInt();
 		int weldStressPenalty = buf.readVarInt();
+		float minimumSpread = buf.readFloat();
+		float spreadReductionPerBarrel = buf.readFloat();
 		return new BigCannonMaterialProperties(minimumVelocityPerBarrel, weight, maxSafeBaseCharges, mode, connectsInSurvival,
-			isWeldable, weldDamage, weldStressPenalty);
+			isWeldable, weldDamage, weldStressPenalty, minimumSpread, spreadReductionPerBarrel);
 	}
 
 	public enum FailureMode implements StringRepresentable {
