@@ -5,8 +5,6 @@ import com.simibubi.create.foundation.config.ConfigBase;
 public class CBCCfgCannons extends ConfigBase {
 
 	public final ConfigInt maxCannonLength = i(64, 3, "maxCannonLength", Comments.maxCannonLength);
-	public final ConfigFloat barrelSpreadReduction = f(1.0f, 0.0f, "barrelSpreadReduction", Comments.barrelSpreadReduction);
-	public final ConfigFloat minimumBigCannonSpread = f(0.1f, 0.0f, "minimumBigCannonSpread");
 	public final ConfigInt quickfiringBreechLoadingCooldown = i(40, 0, "quickfiringBreechLoadingCooldown", Comments.quickfiringBreechLoadingCooldown);
 	public final ConfigInt quickfiringBreechOpeningCooldown = i(5, 0, "quickfiringBreechOpeningCooldown", Comments.quickfiringBreechOpeningCooldown);
 	public final ConfigFloat bigCannonRecoilScale = f(4f, 0, "bigCannonRecoilScale");
@@ -41,7 +39,6 @@ public class CBCCfgCannons extends ConfigBase {
 
 	private static class Comments {
 		static String maxCannonLength = "Maximum length of cannons that can be built.";
-		static String barrelSpreadReduction = "How much each cannon barrel reduces the spread of a fired projectile passing through.";
 		static String deployersCanUseLoadingTools = "If deployers can use loading tools.";
 		static String ramRodReach = "How many blocks inside a cannon a Ram Rod can reach.";
 		static String ramRodStrength = "Maximum amount of munition blocks a Ram Rod can push.";
